[package]
name = "ppt-tas"
version = "0.1.0"
authors = ["MinusKelvin <mark.carlson@minuskelvin.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2"
rand = "0.7"

[target.'cfg(unix)'.dependencies]
nix = "0.15"