[package]
name = "ppt-tas"
version = "0.1.0"
authors = ["MinusKelvin <mark.carlson@minuskelvin.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(unix)'.dependencies]
nix = "0.15"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.8"
features = [
    "impl-default",
    "psapi",
    "processthreadsapi",
    "winnt",
    "handleapi",
    "memoryapi",
    "debugapi",
    "winbase",
    "minwinbase"
]